--- a/car_predict_site/app/templates/base.html
+++ b/car_predict_site/app/templates/base.html
@@ -22,8 +22,8 @@
     <title>Upload de Arquivo CSV</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
-  <body>
-    <main class="container">
+  <body class="bg-light">
+    <main class="container-fluid">
         {% block content %}
 
         {% endblock %}
