--- a/car_predict_site/app/templates/dashboard.html
+++ b/car_predict_site/app/templates/dashboard.html
@@ -44,4 +44,83 @@
     </div>
 </div>
 
+
+
+<div class="container-xxl mt-4">
+    <h1>Gráficos de Treinamento</h1>
+
+    <div class="row">
+        <div class="col-md-6 mb-4">
+            <div class="chart-container">
+                <h3>Ridge egression</h3>
+
+                <object data="{% static 'img_train/1_Ridge_Regression/1_Ridge_Regression_comparacao_preco.svg' %}" type="image/svg+xml"
+                    class="img-fluid"></object>
+            </div>
+        </div>
+
+        <div class="col-md-6 mb-4">
+            <div class="chart-container">
+                <h3>Lasso Regression</h3>
+
+                <object data="{% static 'img_train/2_Lasso_Regression/2_Lasso_Regression_comparacao_preco.svg' %}" type="image/svg+xml"
+                    class="img-fluid"></object>
+            </div>
+        </div>
+
+        <div class="col-md-6 mb-4">
+            <div class="chart-container">
+                <h3>Decision Tree - Comparação</h3>
+
+                <object data="{% static 'img_train/3_Decision_Tree_Regressor/3_Decision_Tree_Regressor_comparacao_preco.svg' %}" type="image/svg+xml"
+                    class="img-fluid"></object>
+            </div>
+        </div>
+
+        <div class="col-md-6 mb-4">
+            <div class="chart-container">
+                <h3>Decision Tree - Importancia</h3>
+
+                <object data="{% static 'img_train/3_Decision_Tree_Regressor/3_Decision_Tree_Regressor_importancia_atributos.svg' %}" type="image/svg+xml"
+                    class="img-fluid"></object>
+            </div>
+        </div>
+
+        <div class="col-md-6 mb-4">
+            <div class="chart-container">
+                <h3>Random forest - Comporação</h3>
+
+                <object data="{% static 'img_train/4_Random_Forest_Regressor/4_Random_Forest_Regressor_comparacao_preco.svg' %}" type="image/svg+xml"
+                    class="img-fluid"></object>
+            </div>
+        </div>
+
+        <div class="col-md-6 mb-4">
+            <div class="chart-container">
+                <h3>Random forest - Importancia</h3>
+
+                <object data="{% static 'img_train/4_Random_Forest_Regressor/4_Random_Forest_Regressor_importancia_atributos.svg' %}" type="image/svg+xml"
+                    class="img-fluid"></object>
+            </div>
+        </div>
+
+        <div class="col-md-6 mb-4">
+            <div class="chart-container">
+                <h3>Gradient Boosting - Comparação</h3>
+
+                <object data="{% static 'img_train/5_Gradient_Boosting_Regressor/5_Gradient_Boosting_Regressor_comparacao_preco.svg' %}" type="image/svg+xml"
+                    class="img-fluid"></object>
+            </div>
+        </div>
+
+        <div class="col-md-6 mb-4">
+            <div class="chart-container">
+                <h3>Gradient Boosting - Importancia</h3>
+
+                <object data="{% static 'img_train/5_Gradient_Boosting_Regressor/5_Gradient_Boosting_Regressor_importancia_atributos.svg' %}" type="image/svg+xml"
+                    class="img-fluid"></object>
+            </div>
+        </div>
+</div>
+
 {% endblock %}
