--- a/car_predict_site/app/templates/dashboard.html
+++ b/car_predict_site/app/templates/dashboard.html
@@ -6,6 +6,9 @@
 {% load static %}
 
 <div class="container-xxl mt-4">
+    <div class="d-flex justify-content-end mb-4">
+        <a href="{% url 'car_prediction' %}" class="btn btn-primary">Ir para Previsão de Carros</a>
+    </div>
     <h1>Gráficos de Analise de Dados</h1>
     <div class="row">
         <div class="col-md-6 mb-4">
