--- a/car_predict_site/app/templates/car_prediction.html
+++ b/car_predict_site/app/templates/car_prediction.html
@@ -7,6 +7,11 @@
 
 <div class="container mt-5">
     <h1>Previsão de Venda de Carros</h1>
+
+    <div class="d-flex justify-content-end mb-4">
+        <a href="{% url 'dashboard' %}" class="btn btn-primary">Ir para Dashboard</a>
+    </div>
+
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
